# hpgs

./: CHANGELOG.md  hpgs.cabal
app/: Main.hs  Types.hs
src/PGS/: Constants.hs  Types.hs  Utils.hs
test/: Tests.hs
test/PGSTests/: Expected.hs  GoldenTests.hs  ParseSerialiseRoundtrip.hs  SerialiseTests.hs  ShiftTests.hs
test/golden/: .Expected.hs.swm  .Expected.hs.swn  .Expected.hs.swo  sample.pgs  sample.sup  test.sup
