cabal-version:   3.0
name:            hpgs
version:         0.1.0.0
synopsis:        A tool to manipulate PGS subtitle files

-- description:
homepage:        https://github.com/GuillaumedeVolpiano/hpgs
license:         BSD-3-Clause
license-file:    LICENSE
author:          GuillaumedeVolpiano
maintainer:      xavier@wheredoibegin.fr

-- copyright:
category:        Graphics
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    PGS.Constants
    PGS.Types
    PGS.Utils

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base           ^>=4.21.0.0
    , bytestring     ^>=0.12.2.0
    , containers     ^>=0.7
    , streamly-core  ^>=0.3.0

  hs-source-dirs:   src
  default-language: Haskell2010

executable hpgs
  import:           warnings
  main-is:          Main.hs
  other-modules:    Types

  -- other-extensions:
  build-depends:
    , base                  ^>=4.21.0.0
    , hpgs
    , optparse-applicative  ^>=0.18.1.0
    , streamly-core         ^>=0.3.0

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite hpgs-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Tests.hs
  other-modules:
    PGSTests.ParseSerialiseRoundtrip
    PGSTests.SerialiseTests
    PGSTests.ShiftTests
    PGSTests.GoldenTests
    PGSTests.Expected

  build-depends:
    , base         ^>=4.21.0.0
    , containers   ^>=0.7
    , hpgs
    , tasty        ^>=1.4.3
    , tasty-hunit  ^>=0.10.2
    , streamly-core ^>=0.3.0

  ghc-options:      -Wall
  default-language: Haskell2010
